# skyproprojekt1

./: .env.example  .gitignore  README.md  pyproject.toml
src/: bank_transactions.py  decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  reading_operations.py  utils.py  widget.py
tests/: bank_transactions_test.py  decorators_test.py  extarnal_api_test.py  generators_test.py  masks_test.py  processing_test.py  reading_operations-test.py  utils_test.py  widget_test.py
