[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Artem Shoshura <artemshoshura@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.5"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"



[tool.poetry.group.lint.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119

[tool.black]
line-length = 119


[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'